<resources>

    <string name="app_name">ChildLink</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="greeting_user">Hi！</string>
    <string name="app_title">ChildLink</string>
    <string name="view_profile">Profile</string>
    <string name="logout">logout</string>
    <string name="profile_title">Profile</string>
    <string name="name_label">Name：</string>
    <string name="age_label">Age：</string>
    <string name="email_label">Email：</string>
    <string name="phone_label">Phone Num：</string>
    <string name="loading_text">loading...</string>
    <string name="emergency_contact_label">Emergency Num:</string>
    <string name="map">Map</string>


</resources>