<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="32dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_user"
        android:textSize="26sp"
        android:textColor="@color/colorText"
        android:layout_marginBottom="24dp" />


    <Button
        android:id="@+id/viewProfileButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/view_profile"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:textSize="18sp" />
</LinearLayout>